added styling, worked on functionality

--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
 
 <body>
   <header>
-
+    <h1>Can you guess the 5 letter word?</h1>
+    <h2>You'll be given 5 attempts</h2>
+    <h3>Good Luck!</h3>
   </header>
   <main>
-    
+    <div class="main-container">
+      <div class="form-container">
+        <!-- Form generated with JavaScript -->
+      </div>
+      <div class="outcome"></div>
+    </div>
   </main>
   <script src="./assets/script.js"></script>
 </body>
